# yta-dev

./: .env  Cargo.toml  readme.md
macros/: Cargo.toml  build.rs
macros/src/: fns.rs  impls.rs  lib.rs  structs.rs
ta/: Cargo.toml  build.rs
ta/src/: enums.rs  fns.rs  impls.rs  lib.rs  macros.rs  main.rs  structs.rs  traits.rs
ta/tests/: integration_test.rs
